--- a/logo/css/styles.css
+++ b/logo/css/styles.css
@@ -106,6 +106,58 @@ h6 {
   font-weight: inherit;
 }
 
+.quantity {
+  width: 120px;
+  height: 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.quantity__button {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 20px;
+          flex: 0 0 20px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  width: 20px;
+  height: 17px;
+}
+
+.quantity__button--plus {
+  background: url("../img/slarrg.svg") 0 0/100% no-repeat;
+  -webkit-transform: rotate(-180deg);
+  -ms-transform: rotate(-180deg);
+  transform: rotate(-180deg);
+}
+
+.quantity__button--minus {
+  background: url("../img/slarrg.svg") 0 0/100% no-repeat;
+}
+
+.quantity__input {
+  height: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 0px 12px;
+}
+
+.quantity__input input {
+  border: 2px solid #e5e5e5;
+  height: 100%;
+  width: 100%;
+  color: #a6a6a6;
+  font-size: 12px;
+  text-align: center;
+}
+
 body._lock {
   overflow: hidden;
 }
@@ -2360,6 +2412,343 @@ body._lock {
   font-weight: 900;
 }
 
+.product__title {
+  color: #333333;
+  font-family: "ush";
+  font-size: 36px;
+  line-height: 36px;
+  text-align: left;
+  text-transform: uppercase;
+  margin: 0px 0px 18px 0px;
+}
+
+.product__title span {
+  display: block;
+  color: #dadada;
+  font-size: 30px;
+}
+
+.product__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  margin: 0px 0px 20px 0px;
+}
+
+.product__images {
+  min-width: 0;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 42.3%;
+          flex: 0 0 42.3%;
+  max-width: 42.3%;
+  margin: 0px 0px 15px 0px;
+}
+
+.product__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 0px 0px 0px 30px;
+  margin: 0px 0px 15px 0px;
+}
+
+.images-product {
+  width: 100%;
+}
+
+.images-product__mainslider {
+  margin: 0px 0px 13px 0px;
+}
+
+.images-product__mainslide {
+  border: 1px solid #f5f5f5;
+  height: 308px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.images-product__sale {
+  position: absolute;
+  width: 58px;
+  height: 58px;
+  top: 16px;
+  left: 20px;
+  background-color: #f65738;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ffffff;
+  font-size: 16px;
+  font-weight: 900;
+  letter-spacing: 0.29px;
+}
+
+.images-product__subslider {
+  margin: 0px -6px;
+}
+
+.images-product__subslide {
+  padding: 0px 6px;
+  cursor: pointer;
+}
+
+.images-product__subslide.swiper-slide-thumb-active .images-product__subimage {
+  border: 1px solid #f68038;
+}
+
+.images-product__subslide.swiper-slide-thumb-active .images-product__subimage:after {
+  opacity: 1;
+}
+
+.images-product__subimage {
+  position: relative;
+  height: 68px;
+  border: 1px solid #e4e4e4;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.images-product__subimage:after {
+  content: "";
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #f68038;
+  -webkit-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+}
+
+.body-product__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 7px 0px 12px;
+  border-bottom: 1px solid #ededed;
+}
+
+.body-product__compare {
+  background-color: #f3f3f3;
+  padding: 0px 20px 0px 13px;
+  border-radius: 20px;
+}
+
+.no-webp .body-product__compare span{
+  background: url("../img/cp.png") left center no-repeat; }
+
+.body-product__compare span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 33px;
+  color: #666666;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  padding: 0px 0px 0px 30px;
+}
+
+.body-product__stock {
+  padding: 6px 10px;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 300;
+  background-color: #f68038;
+  border-radius: 15px;
+}
+
+.actions-product {
+  padding: 22px 0px 30px;
+  border-bottom: 1px solid #ededed;
+}
+
+.actions-product__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px -15px;
+}
+
+.actions-product__column {
+  padding: 0px 15px;
+}
+
+.actions-product__price {
+  color: #333333;
+  font-size: 24px;
+  font-weight: 900;
+  white-space: nowrap;
+}
+
+.actions-product__price::after {
+  font-size: 19px;
+}
+
+.actions-product__price--old {
+  color: #999999;
+  font-size: 18px;
+  font-weight: 300;
+  text-decoration: line-through;
+  margin: 0px 0px 5px 0px;
+}
+
+.actions-product__price--old::after {
+  font-size: 14px;
+}
+
+.actions-product__quantity input {
+  color: #999999;
+  font-size: 16px;
+  font-weight: 900;
+}
+
+.actions-product__cart {
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px 44px 0px 0px;
+  position: relative;
+}
+
+.no-webp .actions-product__cart:after{
+  background: url("../img/big_cart_o.png") 0 0 no-repeat; }
+
+.actions-product__cart:after {
+  content: "";
+  position: absolute;
+  right: 0px;
+  height: 57px;
+  width: 57px;
+}
+
+.actions-product__cart span {
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0px 22px 0px 16px;
+  background-color: #f3f3f3;
+  height: 34px;
+  color: #999999;
+  font-size: 14px;
+  font-weight: 900;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.include-product {
+  border-bottom: 1px solid #ededed;
+  padding: 22px 0px 2px;
+}
+
+.include-product__title {
+  color: #333333;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin: 0px 0px 23px 0px;
+}
+
+.include-product__items {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  font-size: 0;
+}
+
+.include-product__item {
+  text-align: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.33333%;
+          flex: 0 1 33.33333%;
+  margin: 0px 30px 10px 0px;
+}
+
+.include-product__item:last-child {
+  margin: 0px 0px 10px 0px;
+}
+
+.include-product__icon {
+  min-height: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0px 0px 8px 0px;
+}
+
+.include-product__icon img {
+  max-width: 100%;
+}
+
+.include-product__text {
+  display: inline-block;
+  max-width: 100px;
+  color: #999999;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 16px;
+}
+
 .rub:after {
   content: "₽";
   margin: 0px 0px 0px 3px;
@@ -2719,6 +3108,14 @@ textarea.input {
 }
 
 @media (min-width: 979px) {
+  .quantity__button--plus:hover {
+    background: url("../img/sparr.svg") 0 0/100% no-repeat;
+  }
+
+  .quantity__button--minus:hover {
+    background: url("../img/sparr.svg") 0 0/100% no-repeat;
+  }
+
   .actions-header {
     padding: 0px 0px 0px 16px;
   }
@@ -3577,6 +3974,10 @@ textarea.input {
 .webp .section-filter__title._spoiler._active:after{ background-image: url(../img/arrdg.webp); }
 
 .webp .compare-filter__button span{ background: url(../img/cp_w.webp) left no-repeat; }
+
+.webp .body-product__compare span{ background: url(../img/cp.webp) left center no-repeat; }
+
+.webp .actions-product__cart:after{ background: url(../img/big_cart_o.webp) 0 0 no-repeat; }
 
 @media (min-width: 640px){
 
