--- a/#sources/scss/product.scss
+++ b/#sources/scss/product.scss
@@ -17,23 +17,34 @@
 
   // .product__content
   &__content {
-    @include flexbox();
+    @media (min-width: 700px) {
+      @include flexbox();
+    }
     margin: 0px 0px 20px 0px;
   }
 
   // .product__images
   &__images {
     min-width: 0;
-    flex: 0 0 42.3%;
-    max-width: 42.3%;
-    margin: 0px 0px 15px 0px;
+    margin: 0px 0px 30px 0px;
+    @media (min-width: $md1+px) {
+      flex: 0 0 360px;
+      max-width: 360px;
+    }
+    @media (min-width: 700px) {
+      flex: 0 0 330px;
+      max-width: 330px;
+      margin: 0px 0px 15px 0px;
+    }
   }
 
   // .product__body
   &__body {
     flex: 1 1 auto;
-    padding: 0px 0px 0px 30px;
     margin: 0px 0px 15px 0px;
+    @media (min-width: 700px) {
+      padding: 0px 0px 0px 30px;
+    }
   }
 }
 .images-product {
@@ -101,7 +112,8 @@
   // .images-product__subimage
   &__subimage {
     position: relative;
-    height: 68px;
+    // height: 68px;
+    padding: 0px 0px 82% 0px;
     border: 1px solid #e4e4e4;
     @include anim(0.5s, 0s);
     &:after {
@@ -174,6 +186,7 @@
   // .actions-product__row
   &__row {
     @include flexbox();
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     margin: 0px -15px;
@@ -182,6 +195,11 @@
   // .actions-product__column
   &__column {
     padding: 0px 15px;
+    @media (max-width: $md1+px) {
+      &:last-child {
+        flex: 1 1 100%;
+      }
+    }
   }
 
   // .actions-product__price
@@ -234,6 +252,7 @@
     span {
       white-space: nowrap;
       @include flexbox();
+      flex: 1 1 100%;
       align-items: center;
       justify-content: center;
       padding: 0px 22px 0px 16px;
@@ -244,6 +263,9 @@
       font-weight: 900;
       text-align: center;
       text-transform: uppercase;
+    }
+    @media (max-width: $md1+px) {
+      margin: 20px 0 0 0;
     }
   }
 }
