--- a/logo/css/styles.css
+++ b/logo/css/styles.css
@@ -2444,6 +2444,10 @@ body._lock {
   margin: 0px 0px 15px 0px;
 }
 
+.product__info {
+  margin: 0px 0px 70px 0px;
+}
+
 .images-product {
   width: 100%;
 }
@@ -2745,6 +2749,100 @@ body._lock {
   line-height: 16px;
 }
 
+.info-product__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.info-product__item {
+  height: 49px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0px 30px;
+}
+
+.info-product__item span {
+  padding: 2px 0px 0px 0px;
+  color: #72c9d4;
+  font-size: 14px;
+  font-weight: 900;
+  text-transform: uppercase;
+  border-bottom: 2px dotted;
+}
+
+.info-product__item._active {
+  background-color: #72c9d4;
+}
+
+.info-product__item._active span {
+  color: #ffffff;
+  border-bottom: 2px dotted transparent;
+}
+
+.info-product__body {
+  background-color: #fafafa;
+  padding: 35px 30px;
+}
+
+.info-product__block p {
+  color: #666666;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  text-align: left;
+  margin: 0px 0px 25px 0px;
+}
+
+.info-product__block p:last-child {
+  margin: 0px 0px 0px 0px;
+}
+
+.info-product__table {
+  border-collapse: collapse;
+  width: 100%;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+}
+
+.info-product__table tr {
+  border-bottom: 1px solid #e2e2e2;
+}
+
+.info-product__table td:first-child {
+  width: 45%;
+}
+
+.info-product__label {
+  padding: 12px 5px 12px 0px;
+  color: #333333;
+}
+
+.info-product__value {
+  color: #999999;
+}
+
+.same-products__title {
+  font-family: "ush";
+  text-transform: uppercase;
+  color: #dadada;
+  font-size: 30px;
+  margin: 0px 0px 30px 0px;
+}
+
 .rub:after {
   content: "₽";
   margin: 0px 0px 0px 3px;
@@ -2959,6 +3057,22 @@ textarea.input {
 .checkbox a {
   color: black;
   text-decoration: underline;
+}
+
+._tabs-item {
+  cursor: pointer;
+}
+
+._tabs-item._active {
+  cursor: default;
+}
+
+._tabs-block {
+  display: none;
+}
+
+._tabs-block._active {
+  display: block;
 }
 
 .slick-slider {
@@ -3721,6 +3835,20 @@ textarea.input {
 
   .text-block__container {
     padding: 0;
+  }
+
+  .product__info {
+    margin: 0px -10px 30px -10px;
+  }
+
+  .info-product__item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+  }
+
+  .info-product__body {
+    padding: 25px 10px;
   }
 }
 
