--- a/#sources/scss/product.scss
+++ b/#sources/scss/product.scss
@@ -46,6 +46,18 @@
       padding: 0px 0px 0px 30px;
     }
   }
+
+  // .product__info
+  &__info {
+    margin: 0px 0px 70px 0px;
+    @media (max-width: $md3+px) {
+      margin: 0px -10px 30px -10px;
+    }
+  }
+
+  // .product__same
+  &__same {
+  }
 }
 .images-product {
   width: 100%;
@@ -318,5 +330,109 @@
     font-size: 12px;
     font-weight: 300;
     line-height: 16px;
+  }
+}
+
+.info-product {
+  // .info-product__nav
+  &__nav {
+    @include flexbox();
+    align-items: center;
+  }
+
+  // .info-product__item
+  &__item {
+    height: 49px;
+    @include flexbox();
+    align-items: center;
+    justify-content: center;
+    padding: 0px 30px;
+    span {
+      padding: 2px 0px 0px 0px;
+      color: #72c9d4;
+      font-size: 14px;
+      font-weight: 900;
+      text-transform: uppercase;
+      border-bottom: 2px dotted;
+    }
+
+    &._active {
+      background-color: #72c9d4;
+      span {
+        color: #ffffff;
+        border-bottom: 2px dotted transparent;
+      }
+    }
+    @media (max-width: $md3+px) {
+      flex: 1 1 auto;
+    }
+  }
+
+  // .info-product__body
+  &__body {
+    background-color: #fafafa;
+    padding: 35px 30px;
+    @media (max-width: $md3+px) {
+      padding: 25px 10px;
+    }
+  }
+
+  // .info-product__block
+  &__block {
+    p {
+      color: #666666;
+      font-size: 14px;
+      font-weight: 300;
+      line-height: 22px;
+      text-align: left;
+
+      margin: 0px 0px 25px 0px;
+      &:last-child {
+        margin: 0px 0px 0px 0px;
+      }
+    }
+  }
+
+  // .info-product__table
+  &__table {
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    tr {
+      border-bottom: 1px solid #e2e2e2;
+    }
+    td {
+      &:first-child {
+        width: 45%;
+      }
+    }
+  }
+
+  // .info-product__label
+  &__label {
+    padding: 12px 5px 12px 0px;
+    color: #333333;
+  }
+
+  // .info-product__value
+  &__value {
+    color: #999999;
+  }
+}
+
+.same-products {
+  // .same-products__title
+  &__title {
+    font-family: "ush";
+    text-transform: uppercase;
+    color: #dadada;
+    font-size: 30px;
+    margin: 0px 0px 30px 0px;
+  }
+
+  // .same-products__items
+  &__items {
   }
 }
